# scripts

./: #archive.hs#  #dedup#  #git-purge-from-annex#  #pushme#  #syncit#  .#archive.hs  .#dedup  .#git-purge-from-annex  .gitignore  .gitmodules  .hgignore  7tar  7untar  Apple Mail - Remote Training.scpt  CLAUDE.md  Commands  Convert Webarchives to paginated PDF.scpt  Convert to PDF 2.scpt  Convert to PDF 3.scpt  Convert to PDF.scpt  Download links to PDF.scpt  MacPorts-2.1.1-10.7-Lion.pkg  Make_Dovecot_User.command  OCR Scan with Acrobat.scpt  OCR This (Acrobat) with Save As.scpt  OCR This (Acrobat).scpt  README  README.md  ServicesRestart  Verify file references.scpt  WIGGUM_TASKS.md  abspath  accept  ack  act  activate  ada  add-secret  addmail  addr  (+934 more)
Mail Scripts/: Filter Sent Messages.scpt
ai_launcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backup/: archives.pr  backup  backup-dvd  backup-games  backup-pb  backup-vps  changing.ex  dvd.pr  generated.ex  large.ex  pb.pr  private.ex  trash.ex  usb4gb.pr  vps-archives.pr  vps-private.pr  vps-snapshot.pr  vps.pr
dtrace/: README  bitesize.d  brk.d  cdrom.d  chap2_pexec.d  cifserrors.d  cifsfbtnofile.d  cifsfileio.d  cifsops.d  cifsrwsnoop.d  cifsrwtime.d  cpudispqlen.d  cswstat.d  cuckoo.d  disk_io.d  disklatency.d  dnlcps.d  dnsgetname.d  dvd.d  fcerror.d  fcwho.d  fserrors.d  fsflush.d  fsflush_cpu.d  fsrtpk.d  fsrwcount.d  fsrwtime.d  fssnoop.d  fstop10.d  fstop10_enhanced.d  fswho.d  ftpdfileio.d  ftpdxfer.d  geomiosnoop.d  getaddrinfo.d  hfsfileread.d  hfssnoop.d  httpclients.d  httpdurls.d  httperrors.d  (+197 more)
(+89 files in other folders)
